fix shadow flickering in Chrome on Windows

--- a/app/root.css
+++ b/app/root.css
@@ -191,7 +191,7 @@ main {
 article {
   background-color: var(--bgColorQuestionAnswer);
   border-radius: 2px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
   transition: margin 400ms;
 }
 
